[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Sprites/fon.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Fonts/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/equipment/equipment.gd" type="Script" id=3]
[ext_resource path="res://Buttons/equipment_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Graphics/Sprites/Exit.png" type="Texture" id=5]
[ext_resource path="res://Buttons/equipment_variant.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="equipment" type="Node2D"]
position = Vector2( 1.5874, -7 )
script = ExtResource( 3 )

[node name="fon" type="Sprite" parent="."]
position = Vector2( 104.872, -20 )
scale = Vector2( 25.125, 14.9961 )
texture = ExtResource( 1 )

[node name="name_of_unit" type="Label" parent="."]
margin_left = -96.1275
margin_top = -140.0
margin_right = 303.872
margin_bottom = -115.0
custom_fonts/font = SubResource( 1 )
text = "unit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="."]
margin_left = -96.1275
margin_top = -114.969
margin_right = 303.872
margin_bottom = -89.9689
custom_fonts/font = SubResource( 1 )
text = "hp"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="antipersonnel_attack" type="Label" parent="."]
margin_left = -96.1275
margin_top = -89.9689
margin_right = 305.872
margin_bottom = -64.9689
custom_fonts/font = SubResource( 1 )
text = "attak"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anti_tank_attak" type="Label" parent="."]
margin_left = -96.1275
margin_top = -64.9689
margin_right = 305.872
margin_bottom = -39.9689
custom_fonts/font = SubResource( 1 )
text = "attak"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment_button" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = 510.872
margin_top = -172.542
margin_right = 729.872
margin_bottom = -141.542

[node name="exit" type="Button" parent="."]
margin_left = 278.524
margin_top = -142.529
margin_right = 311.524
margin_bottom = -115.529
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_variant_support" type="Button" parent="."]
margin_left = 305.872
margin_top = -139.969
margin_right = 510.872
margin_bottom = -108.969
custom_fonts/font = SubResource( 2 )
text = "Поддержка"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_variant_support_weapon" type="Button" parent="."]
margin_left = 305.872
margin_top = -108.969
margin_right = 510.872
margin_bottom = -77.9689
custom_fonts/font = SubResource( 2 )
text = "Огневая поддержка"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_variant_weapon" type="Button" parent="."]
margin_left = 305.872
margin_top = -77.9689
margin_right = 510.872
margin_bottom = -46.9689
custom_fonts/font = SubResource( 2 )
text = "Оружие"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_variant_tech" type="Button" parent="."]
margin_left = 305.872
margin_top = -46.9689
margin_right = 510.872
margin_bottom = -15.9689
custom_fonts/font = SubResource( 2 )
text = "Техника"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="equipment_variant1" parent="." instance=ExtResource( 6 )]
margin_left = -96.1275
margin_top = -25.4076
margin_right = 104.872
margin_bottom = 5.59236

[node name="equipment_variant2" parent="." instance=ExtResource( 6 )]
margin_left = 104.872
margin_top = -25.4076
margin_right = 305.872
margin_bottom = 5.59236

[node name="equipment_variant3" parent="." instance=ExtResource( 6 )]
margin_left = -96.1275
margin_top = 6.0643
margin_right = 104.872
margin_bottom = 37.0643

[node name="equipment_variant4" parent="." instance=ExtResource( 6 )]
margin_left = -96.1275
margin_top = 68.0559
margin_right = 104.872
margin_bottom = 99.0559

[node name="equipment_variant5" parent="." instance=ExtResource( 6 )]
margin_left = -96.1275
margin_top = 36.5924
margin_right = 104.872
margin_bottom = 67.5924

[node name="equipment_variant6" parent="." instance=ExtResource( 6 )]
margin_left = 104.872
margin_top = 36.5924
margin_right = 305.872
margin_bottom = 67.5924

[node name="equipment_variant8" parent="." instance=ExtResource( 6 )]
margin_left = 104.872
margin_top = 68.0559
margin_right = 305.872
margin_bottom = 99.0559

[node name="equipment_variant7" parent="." instance=ExtResource( 6 )]
margin_left = 104.872
margin_top = 5.59236
margin_right = 305.872
margin_bottom = 36.5924

[connection signal="visibility_changed" from="." to="." method="_on_equipment_visibility_changed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="button_variant_support" to="." method="_on_support_pressed"]
[connection signal="pressed" from="button_variant_support_weapon" to="." method="_on_support_weapon_pressed"]
[connection signal="pressed" from="button_variant_weapon" to="." method="_on_weapon_pressed"]
[connection signal="pressed" from="button_variant_tech" to="." method="_on_tech_pressed"]
